--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "deta": "^1.1.0",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "npm": "^9.4.0",
